add predictor at sentences

--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T11:14:16.896815200Z",
-     "start_time": "2025-06-08T11:14:14.814137300Z"
+     "end_time": "2025-06-08T19:48:56.380854100Z",
+     "start_time": "2025-06-08T19:48:54.252694200Z"
     }
    },
    "id": "189d752f13e679c2"
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T11:14:16.919749500Z",
-     "start_time": "2025-06-08T11:14:16.898816500Z"
+     "end_time": "2025-06-08T19:48:56.398512900Z",
+     "start_time": "2025-06-08T19:48:56.380854100Z"
     }
    },
    "id": "1271fe52447729d6"
@@ -1029,8 +1029,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T11:14:28.245925700Z",
-     "start_time": "2025-06-08T11:14:16.924747200Z"
+     "end_time": "2025-06-08T19:49:06.357557300Z",
+     "start_time": "2025-06-08T19:48:56.407530100Z"
     }
    },
    "id": "fee7df9628f0876a"
@@ -1071,8 +1071,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T11:14:28.536731200Z",
-     "start_time": "2025-06-08T11:14:28.242924300Z"
+     "end_time": "2025-06-08T19:49:06.678369400Z",
+     "start_time": "2025-06-08T19:49:06.362058600Z"
     }
    },
    "id": "35f7cccb37f237b4"
@@ -1101,89 +1101,90 @@
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[ 0.22776094,  0.46970123,  0.70324725, ...,  0.14635862,\n",
-      "         1.0238168 , -0.9463383 ],\n",
-      "       [ 0.08742154,  0.2278345 ,  0.34740365, ..., -0.1466554 ,\n",
-      "         0.61614096, -1.0300957 ],\n",
-      "       [-0.06776999, -0.04082734, -0.06774805, ..., -0.3656779 ,\n",
-      "         0.22884615, -1.0415238 ],\n",
+      "Example of first item: [array([[ 0.71168303,  0.93274367,  1.0181258 , ...,  0.53064907,\n",
+      "         1.3929416 ,  1.2498274 ],\n",
+      "       [ 0.83918434,  1.0260444 ,  1.0319407 , ...,  0.79336935,\n",
+      "         1.4869034 ,  1.4126298 ],\n",
+      "       [ 0.96911293,  1.103266  ,  1.0132477 , ...,  1.0485287 ,\n",
+      "         1.6188169 ,  1.5175755 ],\n",
       "       ...,\n",
-      "       [-1.3213954 , -0.93309444, -0.07610805, ..., -0.46508783,\n",
-      "        -0.98153764,  0.23164782],\n",
-      "       [-1.4564943 , -1.0470396 , -0.07786182, ..., -0.53110176,\n",
-      "        -1.0577328 ,  0.05647672],\n",
-      "       [-1.6199298 , -1.1973821 , -0.17433581, ..., -0.52290905,\n",
-      "        -1.0656656 , -0.04597962]], dtype=float32)]\n",
+      "       [-0.5430504 , -0.5097524 , -0.69078404, ..., -1.1742845 ,\n",
+      "        -1.5947932 , -1.685561  ],\n",
+      "       [-0.6588568 , -0.6368154 , -0.6984955 , ..., -1.3331498 ,\n",
+      "        -1.7142816 , -1.9098184 ],\n",
+      "       [-0.77863264, -0.8102392 , -0.7087084 , ..., -1.5143999 ,\n",
+      "        -1.823878  , -2.159508  ]], dtype=float32)]\n",
+      "Example of first item: {'A': 0.0045, 'B': 0.0002, 'C': 0.0006, 'D': 0.0, 'E': 0.0017, 'F': 0.0, 'G': 0.0, 'H': 0.9564, 'I': 0.0094, 'J': 0.0001, 'K': 0.0001, 'L': 0.0, 'M': 0.0, 'N': 0.0, 'O': 0.0034, 'P': 0.0001, 'Q': 0.0, 'R': 0.0012, 'S': 0.0006, 'T': 0.0012, 'U': 0.0025, 'V': 0.0, 'W': 0.0011, 'X': 0.0, 'Y': 0.0005, 'Z': 0.0, '1': 0.0004, '2': 0.0004, '3': 0.0001, '4': 0.0001, '5': 0.0, '6': 0.0, '7': 0.0, '8': 0.0001, '9': 0.0001, '_': 0.0, ' ': 0.0149}\n",
       "Example of first item: [[1.490e-02 1.490e-02]\n",
+      " [1.490e-02 1.490e-02]\n",
       " [4.000e-04 4.000e-04]\n",
       " [4.000e-04 4.000e-04]\n",
+      " [4.000e-04 4.000e-04]\n",
+      " [4.000e-04 4.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
       " [1.000e-04 1.000e-04]\n",
       " [1.000e-04 1.000e-04]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
       " [1.000e-04 1.000e-04]\n",
       " [1.000e-04 1.000e-04]\n",
       " [4.500e-03 4.500e-03]\n",
+      " [4.500e-03 4.500e-03]\n",
+      " [2.000e-04 2.000e-04]\n",
       " [2.000e-04 2.000e-04]\n",
       " [6.000e-04 6.000e-04]\n",
+      " [6.000e-04 6.000e-04]\n",
       " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.700e-03 1.700e-03]\n",
       " [1.700e-03 1.700e-03]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
       " [9.564e-01 9.564e-01]\n",
+      " [9.564e-01 9.564e-01]\n",
+      " [9.400e-03 9.400e-03]\n",
       " [9.400e-03 9.400e-03]\n",
       " [1.000e-04 1.000e-04]\n",
       " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [3.400e-03 3.400e-03]\n",
+      " [3.400e-03 3.400e-03]\n",
+      " [1.000e-04 1.000e-04]\n",
       " [1.000e-04 1.000e-04]\n",
       " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.200e-03 1.200e-03]\n",
       " [1.200e-03 1.200e-03]\n",
       " [6.000e-04 6.000e-04]\n",
+      " [6.000e-04 6.000e-04]\n",
+      " [1.200e-03 1.200e-03]\n",
       " [1.200e-03 1.200e-03]\n",
       " [2.500e-03 2.500e-03]\n",
+      " [2.500e-03 2.500e-03]\n",
+      " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [1.100e-03 1.100e-03]\n",
+      " [1.100e-03 1.100e-03]\n",
+      " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [5.000e-04 5.000e-04]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
-      " [0.000e+00 0.000e+00]\n",
+      " [5.000e-04 5.000e-04]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
       " [0.000e+00 0.000e+00]\n",
@@ -1206,6 +1207,7 @@
     "        print(\"Example of first item:\", final_data[1][\"char_idx_in_sentence\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"sentence\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"eeg_chunk\"][0:1])\n",
+    "        print(\"Example of first item:\", final_data[1][\"next_char_probabilities\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"prob_chunk\"])\n",
     "else:\n",
     "    print(\"Failed to load data. Please check the file path.\")"
@@ -1213,8 +1215,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T11:14:28.730493400Z",
-     "start_time": "2025-06-08T11:14:28.533518800Z"
+     "end_time": "2025-06-08T19:49:06.885979500Z",
+     "start_time": "2025-06-08T19:49:06.685890900Z"
     }
    },
    "id": "5e44c00fca7cb60f"
