remove rnn model

--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import random\n",
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:48:56.380854100Z",
-     "start_time": "2025-06-08T19:48:54.252694200Z"
+     "end_time": "2025-06-12T06:56:32.433344600Z",
+     "start_time": "2025-06-12T06:56:32.373373Z"
     }
    },
    "id": "189d752f13e679c2"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:48:56.398512900Z",
-     "start_time": "2025-06-08T19:48:56.380854100Z"
+     "end_time": "2025-06-12T06:56:32.481119600Z",
+     "start_time": "2025-06-12T06:56:32.396176200Z"
     }
    },
    "id": "1271fe52447729d6"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -1029,8 +1029,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:49:06.357557300Z",
-     "start_time": "2025-06-08T19:48:56.407530100Z"
+     "end_time": "2025-06-12T06:56:40.920659500Z",
+     "start_time": "2025-06-12T06:56:32.411938900Z"
     }
    },
    "id": "fee7df9628f0876a"
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -1071,8 +1071,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:49:06.678369400Z",
-     "start_time": "2025-06-08T19:49:06.362058600Z"
+     "end_time": "2025-06-12T06:56:41.185962300Z",
+     "start_time": "2025-06-12T06:56:40.925493100Z"
     }
    },
    "id": "35f7cccb37f237b4"
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -1101,19 +1101,19 @@
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[ 0.71168303,  0.93274367,  1.0181258 , ...,  0.53064907,\n",
-      "         1.3929416 ,  1.2498274 ],\n",
-      "       [ 0.83918434,  1.0260444 ,  1.0319407 , ...,  0.79336935,\n",
-      "         1.4869034 ,  1.4126298 ],\n",
-      "       [ 0.96911293,  1.103266  ,  1.0132477 , ...,  1.0485287 ,\n",
-      "         1.6188169 ,  1.5175755 ],\n",
+      "Example of first item: [array([[-1.2835948 , -0.8696827 , -0.63357687, ..., -0.8235423 ,\n",
+      "        -0.7878795 , -0.60256517],\n",
+      "       [-1.289872  , -0.85476553, -0.64955145, ..., -0.6701227 ,\n",
+      "        -0.5584078 , -0.4237045 ],\n",
+      "       [-1.2481786 , -0.7888243 , -0.64355093, ..., -0.5354535 ,\n",
+      "        -0.35739008, -0.2570909 ],\n",
       "       ...,\n",
-      "       [-0.5430504 , -0.5097524 , -0.69078404, ..., -1.1742845 ,\n",
-      "        -1.5947932 , -1.685561  ],\n",
-      "       [-0.6588568 , -0.6368154 , -0.6984955 , ..., -1.3331498 ,\n",
-      "        -1.7142816 , -1.9098184 ],\n",
-      "       [-0.77863264, -0.8102392 , -0.7087084 , ..., -1.5143999 ,\n",
-      "        -1.823878  , -2.159508  ]], dtype=float32)]\n",
+      "       [ 0.6414426 ,  0.82679033,  0.8949905 , ...,  0.7397481 ,\n",
+      "         0.8634642 ,  0.8789248 ],\n",
+      "       [ 0.5591661 ,  0.81037956,  0.9656031 , ...,  0.7616999 ,\n",
+      "         0.9122697 ,  0.9680821 ],\n",
+      "       [ 0.43155485,  0.71449965,  0.9222388 , ...,  0.7240543 ,\n",
+      "         0.8748701 ,  1.0227684 ]], dtype=float32)]\n",
       "Example of first item: {'A': 0.0045, 'B': 0.0002, 'C': 0.0006, 'D': 0.0, 'E': 0.0017, 'F': 0.0, 'G': 0.0, 'H': 0.9564, 'I': 0.0094, 'J': 0.0001, 'K': 0.0001, 'L': 0.0, 'M': 0.0, 'N': 0.0, 'O': 0.0034, 'P': 0.0001, 'Q': 0.0, 'R': 0.0012, 'S': 0.0006, 'T': 0.0012, 'U': 0.0025, 'V': 0.0, 'W': 0.0011, 'X': 0.0, 'Y': 0.0005, 'Z': 0.0, '1': 0.0004, '2': 0.0004, '3': 0.0001, '4': 0.0001, '5': 0.0, '6': 0.0, '7': 0.0, '8': 0.0001, '9': 0.0001, '_': 0.0, ' ': 0.0149}\n",
       "Example of first item: [[1.490e-02 1.490e-02]\n",
       " [1.490e-02 1.490e-02]\n",
@@ -1215,8 +1215,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T19:49:06.885979500Z",
-     "start_time": "2025-06-08T19:49:06.685890900Z"
+     "end_time": "2025-06-12T06:56:41.357947400Z",
+     "start_time": "2025-06-12T06:56:41.185962300Z"
     }
    },
    "id": "5e44c00fca7cb60f"
