--- a/ecd/jupyter/model/new.ipynb
+++ b/ecd/jupyter/model/new.ipynb
@@ -136,35 +136,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-12T07:05:27.540581500Z",
-     "start_time": "2025-06-12T07:05:27.360670500Z"
+     "end_time": "2025-06-12T07:20:11.097841200Z",
+     "start_time": "2025-06-12T07:20:10.799989300Z"
     }
    },
    "id": "ab3dd2088ef08dd0"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting data loading and preprocessing...\n",
-      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
-      "Successfully loaded processed data.\n"
-     ]
-    },
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 9.08 GiB for an array with shape (16270, 30, 78, 64) and data type float32",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mMemoryError\u001B[0m                               Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[2], line 112\u001B[0m\n\u001B[0;32m    109\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFailed to load data. Exiting.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m    110\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    111\u001B[0m     \u001B[38;5;66;03m# 2. Preprocess data: Transforms raw data into a format suitable for model training.\u001B[39;00m\n\u001B[1;32m--> 112\u001B[0m     eeg_chunks, prob_chunks, one_hot_characters, classes \u001B[38;5;241m=\u001B[39m \u001B[43mpreprocess_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    113\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mData preprocessing complete.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m    115\u001B[0m     \u001B[38;5;66;03m# 3. Split data into training and validation sets: Divides the dataset into two subsets\u001B[39;00m\n\u001B[0;32m    116\u001B[0m     \u001B[38;5;66;03m# to train the model on one and evaluate its performance on unseen data with the other.\u001B[39;00m\n",
-      "Cell \u001B[1;32mIn[2], line 90\u001B[0m, in \u001B[0;36mpreprocess_data\u001B[1;34m(data)\u001B[0m\n\u001B[0;32m     87\u001B[0m     prob_chunks\u001B[38;5;241m.\u001B[39mappend(item[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mprob_chunk\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[0;32m     88\u001B[0m     characters\u001B[38;5;241m.\u001B[39mappend(item[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcharacter\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[1;32m---> 90\u001B[0m eeg_chunks \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43marray\u001B[49m\u001B[43m(\u001B[49m\u001B[43meeg_chunks\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     91\u001B[0m prob_chunks \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray(prob_chunks)\n\u001B[0;32m     93\u001B[0m \u001B[38;5;66;03m# Normalize EEG data: Standard scaling is applied to EEG data to ensure zero mean and unit variance.\u001B[39;00m\n\u001B[0;32m     94\u001B[0m \u001B[38;5;66;03m# This helps in stabilizing the training process and improving model performance.\u001B[39;00m\n",
-      "\u001B[1;31mMemoryError\u001B[0m: Unable to allocate 9.08 GiB for an array with shape (16270, 30, 78, 64) and data type float32"
+      "Starting data preprocessing...\n"
      ]
     }
    ],
@@ -272,9 +258,7 @@
     "\n",
     "    return eeg_chunks, prob_chunks, one_hot_characters, label_binarizer.classes_\n",
     "\n",
-    "print(\"Starting data loading and preprocessing...\")\n",
-    "# 1. Load data: This step loads the actual dataset from the provided pickle file.\n",
-    "data = load_sentence_eeg_prob_data()\n",
+    "print(\"Starting data preprocessing...\")\n",
     "\n",
     "if data is None:\n",
     "    print(\"Failed to load data. Exiting.\")\n",
@@ -325,15 +309,13 @@
     "    print(\"\\nModel training complete.\")\n",
     "    print(\"Training History:\")\n",
     "    for key, value in history.history.items():\n",
-    "        print(f\"  {key}: {value[-1]:.4f}\")\n",
-    "\n",
-    "\n"
+    "        print(f\"  {key}: {value[-1]:.4f}\")\n"
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-06-12T07:05:59.044652Z",
-     "start_time": "2025-06-12T07:05:27.540581500Z"
+     "start_time": "2025-06-12T07:20:11.070679800Z"
     }
    },
    "id": "92c5b28b38ac5601"
