--- a/ecd/jupyter/model/new.ipynb
+++ b/ecd/jupyter/model/new.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -136,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-12T07:20:11.097841200Z",
-     "start_time": "2025-06-12T07:20:10.799989300Z"
+     "end_time": "2025-06-12T07:24:43.979291800Z",
+     "start_time": "2025-06-12T07:24:43.657345700Z"
     }
    },
    "id": "ab3dd2088ef08dd0"
@@ -145,17 +145,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting data preprocessing...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
     "from tensorflow.keras.layers import Input, Conv1D, MaxPooling1D, Flatten, Dense, concatenate, Dropout\n",
@@ -236,7 +229,7 @@
     "    characters = []\n",
     "\n",
     "    for item in data:\n",
-    "        # Convert eeg_chunk to numpy array if it's a list\n",
+    "        # Convert eeg_chunk to numpy array if it\\'s a list\n",
     "        if isinstance(item[\"eeg_chunk\"], list):\n",
     "            eeg_chunks.append(np.array(item[\"eeg_chunk\"])) # Convert inner list to numpy array\n",
     "        else:\n",
@@ -257,6 +250,22 @@
     "    one_hot_characters = label_binarizer.fit_transform(characters)\n",
     "\n",
     "    return eeg_chunks, prob_chunks, one_hot_characters, label_binarizer.classes_\n",
+    "\n",
+    "    # Check for GPU availability\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        # Currently, memory growth needs to be set right at the start of the program\n",
+    "        for gpu in gpus:\n",
+    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "        logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+    "        print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
+    "        print(\"Using GPU for training.\")\n",
+    "    except RuntimeError as e:\n",
+    "        # Memory growth must be set before GPUs have been initialized\n",
+    "        print(e)\n",
+    "else:\n",
+    "    print(\"No GPU found, using CPU for training.\")\n",
     "\n",
     "print(\"Starting data preprocessing...\")\n",
     "\n",
@@ -309,16 +318,12 @@
     "    print(\"\\nModel training complete.\")\n",
     "    print(\"Training History:\")\n",
     "    for key, value in history.history.items():\n",
-    "        print(f\"  {key}: {value[-1]:.4f}\")\n"
+    "        print(f\"  {key}: {value[-1]:.4f}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2025-06-12T07:20:11.070679800Z"
-    }
+    "collapsed": false
    },
-   "id": "92c5b28b38ac5601"
+   "id": "9e25d8fffada0d06"
   }
  ],
  "metadata": {
