add predictor at sentences

--- a/ecd/jupyter/model/new.ipynb
+++ b/ecd/jupyter/model/new.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -136,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-12T07:24:43.979291800Z",
-     "start_time": "2025-06-12T07:24:43.657345700Z"
+     "end_time": "2025-06-12T09:53:35.639871900Z",
+     "start_time": "2025-06-12T09:53:35.349694400Z"
     }
    },
    "id": "ab3dd2088ef08dd0"
@@ -147,12 +147,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "import os\n",
+    "import pickle\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
-    "from tensorflow.keras.layers import Input, Conv1D, MaxPooling1D, Flatten, Dense, concatenate, Dropout\n",
+    "from tensorflow.keras.layers import Input, Conv1D, MaxPooling1D, Flatten, Dense, concatenate, Dropout, TimeDistributed\n",
     "from tensorflow.keras.models import Model\n",
+    "\n",
     "\n",
     "\n",
     "def create_cnn_model(eeg_input_shape, prob_input_shape, num_classes):\n",
@@ -168,7 +171,7 @@
     "    for final character classification.\n",
     "\n",
     "    Args:\n",
-    "        eeg_input_shape (tuple): Shape of the EEG input data (e.g., (78, 64)).\n",
+    "        eeg_input_shape (tuple): Shape of the EEG input data (e.g., (30, 78, 64)).\n",
     "        prob_input_shape (tuple): Shape of the probability input data (e.g., (78, 2)).\n",
     "        num_classes (int): Number of unique characters to classify (e.g., 26 for A-Z).\n",
     "\n",
@@ -176,18 +179,21 @@
     "        tf.keras.Model: The compiled CNN model.\n",
     "    \"\"\"\n",
     "    # EEG branch: Designed to capture temporal features from multi-channel EEG data\n",
-    "    eeg_input = Input(shape=eeg_input_shape, name='eeg_input')\n",
-    "    # Conv1D layer with 64 filters, kernel size 3, ReLU activation, and same padding\n",
-    "    eeg_conv1 = Conv1D(filters=64, kernel_size=3, activation='relu', padding='same')(eeg_input)\n",
-    "    # MaxPooling1D to reduce dimensionality and provide translational invariance\n",
-    "    eeg_pool1 = MaxPooling1D(pool_size=2)(eeg_conv1)\n",
-    "    # Dropout layer to prevent overfitting by randomly setting a fraction of input units to 0 at each update during training\n",
-    "    eeg_dropout1 = Dropout(0.25)(eeg_pool1) \n",
-    "    eeg_conv2 = Conv1D(filters=128, kernel_size=3, activation='relu', padding='same')(eeg_dropout1)\n",
-    "    eeg_pool2 = MaxPooling1D(pool_size=2)(eeg_conv2)\n",
-    "    eeg_dropout2 = Dropout(0.25)(eeg_pool2) \n",
-    "    # Flatten the output to feed into dense layers\n",
-    "    eeg_flatten = Flatten()(eeg_dropout2)\n",
+    "    # Use TimeDistributed to apply Conv1D to each of the 30 sequences within the EEG data\n",
+    "    eeg_input = Input(shape=eeg_input_shape, name='eeg_input') # e.g., (30, 78, 64)\n",
+    "    \n",
+    "    # Apply Conv1D and MaxPooling1D to each time step (78, 64) independently\n",
+    "    eeg_conv1 = TimeDistributed(Conv1D(filters=64, kernel_size=3, activation='relu', padding='same'))(eeg_input)\n",
+    "    eeg_pool1 = TimeDistributed(MaxPooling1D(pool_size=2))(eeg_conv1)\n",
+    "    eeg_dropout1 = TimeDistributed(Dropout(0.25))(eeg_pool1) \n",
+    "    \n",
+    "    eeg_conv2 = TimeDistributed(Conv1D(filters=128, kernel_size=3, activation='relu', padding='same'))(eeg_dropout1)\n",
+    "    eeg_pool2 = TimeDistributed(MaxPooling1D(pool_size=2))(eeg_conv2)\n",
+    "    eeg_dropout2 = TimeDistributed(Dropout(0.25))(eeg_pool2) \n",
+    "    \n",
+    "    # Flatten the output of each time step, then flatten across time steps\n",
+    "    eeg_flatten_timedist = TimeDistributed(Flatten())(eeg_dropout2)\n",
+    "    eeg_flatten = Flatten()(eeg_flatten_timedist) # Flatten the (batch_size, 30, features) to (batch_size, 30 * features)\n",
     "\n",
     "    # Probability branch: Processes the probability chunk data\n",
     "    prob_input = Input(shape=prob_input_shape, name='prob_input')\n",
@@ -251,7 +257,7 @@
     "\n",
     "    return eeg_chunks, prob_chunks, one_hot_characters, label_binarizer.classes_\n",
     "\n",
-    "    # Check for GPU availability\n",
+    "# Check for GPU availability\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
     "if gpus:\n",
     "    try:\n",
@@ -268,6 +274,7 @@
     "    print(\"No GPU found, using CPU for training.\")\n",
     "\n",
     "print(\"Starting data preprocessing...\")\n",
+    "\n",
     "\n",
     "if data is None:\n",
     "    print(\"Failed to load data. Exiting.\")\n",
@@ -289,8 +296,8 @@
     "    # 4. Create and compile the model: Initializes the CNN model and configures it for training.\n",
     "    # \\'adam\\' optimizer is chosen for its efficiency, and \\'categorical_crossentropy\\' is used\n",
     "    # as the loss function for multi-class classification.\n",
-    "    eeg_input_shape = eeg_train.shape[1:]\n",
-    "    prob_input_shape = prob_train.shape[1:]\n",
+    "    eeg_input_shape = eeg_train.shape[1:] # This will now be (30, 78, 64)\n",
+    "    prob_input_shape = prob_train.shape[1:] # This will be (78, 2)\n",
     "    num_classes = char_train.shape[1]\n",
     "\n",
     "    model = create_cnn_model(eeg_input_shape, prob_input_shape, num_classes)\n",
@@ -321,7 +328,11 @@
     "        print(f\"  {key}: {value[-1]:.4f}\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2025-06-12T09:53:35.639871900Z"
+    }
    },
    "id": "9e25d8fffada0d06"
   }
