add predictor at sentences

--- a/ecd/jupyter/model/new.ipynb
+++ b/ecd/jupyter/model/new.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -136,16 +136,39 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-12T09:53:35.639871900Z",
-     "start_time": "2025-06-12T09:53:35.349694400Z"
+     "end_time": "2025-06-13T18:06:27.298672500Z",
+     "start_time": "2025-06-13T18:06:27.016885200Z"
     }
    },
    "id": "ab3dd2088ef08dd0"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU found, using CPU for training.\n",
+      "Starting data loading and preprocessing...\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
+      "Successfully loaded processed data.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[4], line 134\u001B[0m\n\u001B[0;32m    131\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFailed to load data. Exiting.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m    132\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    133\u001B[0m     \u001B[38;5;66;03m# 2. Preprocess data: Transforms raw data into a format suitable for model training.\u001B[39;00m\n\u001B[1;32m--> 134\u001B[0m     eeg_chunks, prob_chunks, one_hot_characters, classes \u001B[38;5;241m=\u001B[39m \u001B[43mpreprocess_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    135\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mData preprocessing complete.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m    137\u001B[0m     \u001B[38;5;66;03m# 3. Split data into training and validation sets: Divides the dataset into two subsets\u001B[39;00m\n\u001B[0;32m    138\u001B[0m     \u001B[38;5;66;03m# to train the model on one and evaluate its performance on unseen data with the other.\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[4], line 96\u001B[0m, in \u001B[0;36mpreprocess_data\u001B[1;34m(data)\u001B[0m\n\u001B[0;32m     93\u001B[0m     prob_chunks\u001B[38;5;241m.\u001B[39mappend(item[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mprob_chunk\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[0;32m     94\u001B[0m     characters\u001B[38;5;241m.\u001B[39mappend(item[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcharacter\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[1;32m---> 96\u001B[0m eeg_chunks \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43marray\u001B[49m\u001B[43m(\u001B[49m\u001B[43meeg_chunks\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     97\u001B[0m prob_chunks \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray(prob_chunks)\n\u001B[0;32m     99\u001B[0m \u001B[38;5;66;03m# Normalize EEG data: Standard scaling is applied to EEG data to ensure zero mean and unit variance.\u001B[39;00m\n\u001B[0;32m    100\u001B[0m \u001B[38;5;66;03m# This helps in stabilizing the training process and improving model performance.\u001B[39;00m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -155,7 +178,6 @@
     "from sklearn.preprocessing import LabelBinarizer\n",
     "from tensorflow.keras.layers import Input, Conv1D, MaxPooling1D, Flatten, Dense, concatenate, Dropout, TimeDistributed\n",
     "from tensorflow.keras.models import Model\n",
-    "\n",
     "\n",
     "\n",
     "def create_cnn_model(eeg_input_shape, prob_input_shape, num_classes):\n",
@@ -315,7 +337,7 @@
     "        {'eeg_input': eeg_train, 'prob_input': prob_train},\n",
     "        char_train,\n",
     "        epochs=10,  # Number of epochs can be adjusted for better convergence\n",
-    "        batch_size=32, # Batch size can be adjusted based on memory and performance\n",
+    "        batch_size=16, # Batch size can be adjusted based on memory and performance\n",
     "        validation_data=(\n",
     "            {'eeg_input': eeg_val, 'prob_input': prob_val},\n",
     "            char_val\n",
@@ -325,13 +347,13 @@
     "    print(\"\\nModel training complete.\")\n",
     "    print(\"Training History:\")\n",
     "    for key, value in history.history.items():\n",
-    "        print(f\"  {key}: {value[-1]:.4f}\")"
+    "        print(f\"  {key}: {value[-1]:.4f}\")\n"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2025-06-12T09:53:35.639871900Z"
+     "end_time": "2025-06-13T18:07:30.320286200Z",
+     "start_time": "2025-06-13T18:06:27.274555500Z"
     }
    },
    "id": "9e25d8fffada0d06"
