add predictor at sentences

--- a/ecd/jupyter/model/new.ipynb
+++ b/ecd/jupyter/model/new.ipynb
@@ -179,7 +179,6 @@
     "from tensorflow.keras.layers import Input, Conv1D, MaxPooling1D, Flatten, Dense, concatenate, Dropout, TimeDistributed\n",
     "from tensorflow.keras.models import Model\n",
     "\n",
-    "\n",
     "def create_cnn_model(eeg_input_shape, prob_input_shape, num_classes):\n",
     "    \"\"\"\n",
     "    Creates a Convolutional Neural Network (CNN) model for character prediction\n",
@@ -295,8 +294,8 @@
     "else:\n",
     "    print(\"No GPU found, using CPU for training.\")\n",
     "\n",
-    "print(\"Starting data preprocessing...\")\n",
-    "\n",
+    "print(\"Starting data loading and preprocessing...\")\n",
+    "# 1. Load data: This step loads the actual dataset from the provided pickle file.\n",
     "\n",
     "if data is None:\n",
     "    print(\"Failed to load data. Exiting.\")\n",
@@ -314,6 +313,9 @@
     "    print(f\"EEG train shape: {eeg_train.shape}\")\n",
     "    print(f\"Prob train shape: {prob_train.shape}\")\n",
     "    print(f\"Character train shape: {char_train.shape}\")\n",
+    "    print(f\"EEG train dtype: {eeg_train.dtype}\")\n",
+    "    print(f\"Prob train dtype: {prob_train.dtype}\")\n",
+    "    print(f\"Character train dtype: {char_train.dtype}\")\n",
     "\n",
     "    # 4. Create and compile the model: Initializes the CNN model and configures it for training.\n",
     "    # \\'adam\\' optimizer is chosen for its efficiency, and \\'categorical_crossentropy\\' is used\n",
