add predictor at sentences

--- a/ecd/jupyter/model/new.ipynb
+++ b/ecd/jupyter/model/new.ipynb
@@ -265,7 +265,7 @@
     "        characters.append(item[\"character\"])\n",
     "\n",
     "    eeg_chunks = np.array(eeg_chunks)\n",
-    "    prob_chunks = np.array(prob_chunks)\n",
+    "    prob_chunks = np.array(prob_chunks, dtype=np.float32) # Cast to float32\n",
     "\n",
     "    # Normalize EEG data: Standard scaling is applied to EEG data to ensure zero mean and unit variance.\n",
     "    # This helps in stabilizing the training process and improving model performance.\n",
@@ -274,7 +274,7 @@
     "    # One-hot encode characters: Converts categorical character labels into a numerical format\n",
     "    # that can be used by machine learning algorithms. Each character becomes a binary vector.\n",
     "    label_binarizer = LabelBinarizer()\n",
-    "    one_hot_characters = label_binarizer.fit_transform(characters)\n",
+    "    one_hot_characters = label_binarizer.fit_transform(characters).astype(np.float32) # Cast to float32\n",
     "\n",
     "    return eeg_chunks, prob_chunks, one_hot_characters, label_binarizer.classes_\n",
     "\n",
@@ -294,7 +294,7 @@
     "else:\n",
     "    print(\"No GPU found, using CPU for training.\")\n",
     "\n",
-    "print(\"Starting data loading and preprocessing...\")\n",
+    "print(\"Starting and preprocessing...\")\n",
     "# 1. Load data: This step loads the actual dataset from the provided pickle file.\n",
     "\n",
     "if data is None:\n",
